# cau-eclass-mcp

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/cau_eclass_mcp/: __main__.py  auth.py  cau_on_client.py  server_sse.py  server_stdio.py  web_api.py
src/cau_eclass_mcp/static/: index.html
src/cau_eclass_mcp/utils/: credentials.py
